# trustlens

./: .gitignore  ARCHITECTURE.md  CLAIMS.md  CONTRIBUTING.md  GROUNDING.md  LICENSE  LIMITATIONS.md  NOTES.md  README.md  REPRODUCIBILITY.md  SANDBOX_THREAT_MODEL.md  SCHEMA.md  SECURITY.md  pyproject.toml  requirements.txt
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/: COVERAGE_GAPS.md  DEFERRED.md  GROUNDING_UPDATE_phase2_rbac.md  PHASE1_ENTRY_CONDITIONS.md  PHASE3_PLATFORM_CONSTRAINT.md  PROBE_SUITE_REVIEW.md  SIGN_OFF.md  SPEC_external_analyser_integration.md  SPEC_phase2_credential_mapper.md  SPEC_phase3_isolation_selection.md  SPEC_phase4_blast_radius.md
examples/: generate_control_runs.py  generate_examples.py
examples/control_runs/: clean_imagefolder.json  clean_imagefolder.report.txt  clean_jsonl.json  clean_jsonl.report.txt  clean_tabular.json  clean_tabular.report.txt  partial_encoding.json  partial_encoding.report.txt  unsafe_dataset_loader.json  unsafe_dataset_loader.report.txt  unsafe_model_repo.json  unsafe_model_repo.report.txt
examples/records/: blast_radius_record.json  credential_mapper_record.json  sandbox_record.json  scanner_record.json
go/rbac/: go.mod  go.sum  main.go
schemas/: common.schema.json  evidence_record.schema.json  finding.schema.json
schemas/enums/: capability.schema.json  detection_method.schema.json  evidence_strength.schema.json  status.schema.json
scripts/: stats.py
study/: POST_STUDY_FIXES.md  PRE_REGISTRATION.md  WRITEUP.md
study/results/: DIVERGENCE_CATALOGUE.md  PHASE1_VERIFICATIONS.md  PHASE2_END_TO_END.md  corpus.json  manifest.json  selection_log.md
tests/: conftest.py  test_process_boundary.py  test_sandbox_config_isolation.py  test_sandbox_experimental_lock.py  test_stats_mechanism.py
tests/blast/: test_cli.py  test_combine_and_paths.py  test_record_end_to_end.py  (+1 more)
trustlens/: __init__.py  cli.py
(+167 files in other folders)
