[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trustlens"
version = "0.1.0"
description = "Compare what an ML dataset or repository is declared to be with what static analysis, deployment configuration, and controlled execution show it can actually do."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

# The evidence model needs only a JSON Schema validator; the Phase 1 scanner adds a YAML
# parser because it parses untrusted configuration itself rather than shelling out. No
# external analysis engine is a dependency: none is wired into a FOUND/NOT_FOUND claim.
dependencies = [
    "jsonschema>=4.20",
    "PyYAML>=6.0",
]

[project.scripts]
trustlens = "trustlens.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["trustlens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
